--- a/src/app/update-book-list/update-book-list.component.html
+++ b/src/app/update-book-list/update-book-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let books of books1">
+<!-- <div *ngFor="let books of books1">
     <div *ngIf="editState && booksToEdit.id== books.id">
         <form [formGroup]="formUpdate">
             <table class="update-form">
@@ -47,4 +47,4 @@
             </table>
         </form>
     </div>
-</div>
+</div> -->
