--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,6 @@
+    <img class="img-login"
+    src="https://images.unsplash.com/photo-1579370318443-8da816457e3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+    alt="">
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="container">
         <h1>Register</h1>
